- Align point movement between =flyspell-correct-at= and
  =flyspell-correct-move=, so there is no difference in resulting point location
  when any of these functions is called with point at misspelled word.
- Rewrite all tests using [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] library.
- Allow to correct and save the word in one pass (see #66).

* v0.6.1

- Remove deprecated aliases (=flyspell-correct-word-generic=,
  =flyspell-correct-previous-word-generic= and
  =flyspell-correct-next-word-generic=).

* v0.6

- Do not move point by correction functions.
- New interface - =avy-menu=. Thanks to @clemera.
- Mark custom interfaces as autoload.
- Add =use-package= examples.
- Fix errors in transient mode. Thanks to @Ergus
- Fix many warnings.
- Start using =lexical-binding=.

* v0.5

- Skip words that don't need to be fixed (e.g. duplicates).
- Rename several functions (via name deprecation)
  - =flyspell-correct-next-word-generic= -> =flyspell-correct-next=
  - =flyspell-correct-previous-word-generic= -> =flyspell-correct-previous=
  - =flyspell-correct-word-generic= -> =flyspell-correct-at-point=
- Create a wrapper function for most of the cases, namely
  =flyspell-correct-wrapper=.
- Implement a 'rapid mode' for =flyspell-correct-wrapper=, allowing user to fix
  multiple words in one run (=skip= action can be used to skip current incorrect
  word and continue to the next one).
- Add some simple tests to cover the most important use cases.
- Fix issue when =flyspell-correct-next= doesn't correct word at point.

* v0.4

- Implement =flyspell-correct-next-word-generic= (thanks to @mattiasb for
  suggestion).
- Minor readme updates.

* v0.3

- Make sure that word at point is corrected first when using
  =flyspell-correct-previous-word-generic=.
- New =ido= interface (thanks to @jpkotta).
- New =dummy= interface (thanks to @purcell for suggestion).

* v0.2

- Various documentation updates.