@@ -59,7 +59,8 @@ of (command, word) to be used by `flyspell-do-correct'."
          (base-menu  (let ((save `(("Save word" (save . ,word))
                                    ("Accept (session)" (session . ,word))
                                    ("Accept (buffer)" (buffer . ,word))
-                                   ("Skip" (skip . ,word)))))
+                                   ("Skip" (skip . ,word))
+                                   ("Stop" (stop . ,word)))))
                        (if (consp cor-menu)
                            (append cor-menu (cons "" save))
                          save)))
