@@ -53,12 +53,14 @@ of (command, word) to be used by `flyspell-do-correct'."
          (action-accept-session (lambda (_) (setq result (cons 'session word))))
          (action-accept-buffer (lambda (_) (setq result (cons 'buffer word))))
          (action-skip-word (lambda (_) (setq result (cons 'skip word))))
+         (action-stop (lambda (_) (setq result (cons 'stop word))))
          (action `(1
                    ("o" ,action-default "correct")
                    ("s" ,action-save-word "Save")
                    ("S" ,action-accept-session "Accept (session)")
                    ("b" ,action-accept-buffer "Accept (buffer)")
-                   ("k" ,action-skip-word "Skip"))))
+                   ("k" ,action-skip-word "Skip")
+                   ("p" ,action-stop "Stop"))))
     (ivy-read (format "Suggestions for \"%s\" in dictionary \"%s\": "
                       word (or ispell-local-dictionary
                                ispell-dictionary
